# coreL2

./: .gitignore  CMakeLists.txt  README.md
src/CoreL1/: CoreL1.cpp  CoreL1.h
src/CoreL2/: CoreL2.cpp
src/CoreL2/L1L2Interface/: L1L2Interface.cpp  L1L2Interface.h
src/CoreL2/MacController/: MacController.cpp  MacController.h  MacCtHeader.cpp  MacCtHeader.h
src/CoreL2/Multiplexer/: Multiplexer.cpp  Multiplexer.h  TransmissionQueue.cpp  TransmissionQueue.h
src/CoreL2/ProtocolControl/: MacCQueue.cpp  MacCQueue.h
src/CoreL2/ProtocolPackage/: ProtocolPackage.cpp  ProtocolPackage.h
src/CoreL2/TunInterface/: MacHighQueue.cpp  MacHighQueue.h  TunInterface.cpp  TunInterface.h
src/common/lib5grange/: lib5grange.cpp  lib5grange.h
src/common/libMac5gRange/: libMac5gRange.h
src/coreL1/: CoreL1.cpp  CoreL1.h  StubPHYLayer.cpp  StubPHYLayer.h
src/coreL2/: CoreL2.cpp
src/coreL2/AdaptiveModulationCoding/: AdaptiveModulationCoding.cpp  AdaptiveModulationCoding.h
src/coreL2/CLIL2Interface/: CLIL2Interface.cpp  CLIL2Interface.h
src/coreL2/CoreTunInterface/: TunInterface.cpp  TunInterface.h
src/coreL2/Cosora/: Cosora.cpp  Cosora.h
src/coreL2/L1L2Interface/: L1L2Interface.cpp  L1L2Interface.h
src/coreL2/LinkAdaptation/: LinkAdaptation.cpp  LinkAdaptation.h
src/coreL2/MacConfigRequest/: MacConfigRequest.cpp  MacConfigRequest.h
src/coreL2/MacController/: MacController.cpp  MacController.h
src/coreL2/Multiplexer/: AggregationQueue.cpp  AggregationQueue.h  Multiplexer.cpp  Multiplexer.h  TransmissionQueue.cpp  TransmissionQueue.h
(+36 files in other folders)
